# flir_boson_kernel_module

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md  flir_mipi.py  flir_v4l_capture_tests.ipynb  get_info.py  pyproject.toml
BosonSDK/: _version.py  boson_read.py  flir_color_lut.py  flir_get_info.py  flir_mipi.py
BosonSDK/ClientFiles_C/: ReturnCodes.h
BosonSDK/ClientFiles_CSharp/: ReturnCodes.cs
BosonSDK/ClientFiles_MSVC/: Client_API.h
BosonSDK/ClientFiles_Python/: Client_API.py  Client_Dispatcher.py  EnumTypes.py
BosonSDK/CommunicationFiles/: CommonFslp.py  I2CFslp.py  I2CPort.py  PySerialPort.py
BosonSDK/FSLP_Files/src/linux/: serialPortAdapter.c
BosonSDK/FSLP_Files/src/win32/: serialPortAdapter.c
BosonSDKC/ClientFiles_C/: fifo.c
BosonSDKC/ClientFiles_CSharp/: EnumTypes.cs  Serializer_Struct.cs
BosonSDKC/ClientFiles_MSVC/: Client_Packager.c  dataServiceClient.c
BosonSDKC/FSLP_Files/src/: FSLP.c
BosonSDKC/FSLP_Files/src/linux/: serialPortAdapter.c
SDK/ClientFiles_CSharp/: Client_API.cs  Client_Packager.cs  FunctionCodes.cs
SDK/ClientFiles_Python/: Client_API.py  Client_Packager.py  ReturnCodes.py  Serializer_Struct.py
SDK/CommunicationFiles/: CSerialFslp.py  CSerialPort.py  FslpBase.py  I2CFslp.py  I2CPort.py  PySerialFslp.py  i2cdriver_modified.py
flir_boson_v4l2/: .clang-format  .clangd  .clinerules  .gitignore  Client_Dispatcher.c  Client_Dispatcher.h  EnumTypes.h  I2C_Connector.c  I2C_Connector.h  Kconfig  Makefile  README.md  README_Testing.md  ReturnCodes.h  flir-boson-core.c  flir-boson-fslp.c  flir-boson.h  test_fslp_validator.py  test_simulation_mode.py
flir_boson_v4l2/devicetree/: flir-boson-dt.yaml  scailx-imx8mp-cam0-flir-bosonp.dts  scailx-imx8mp-cam1-flir-bosonp.dts
flir_boson_v4l2/python/: README.md  __init__.py  example.py  v4l2_fslp.py
flir_boson_vvcam/: Makefile  README.md  compile_flags.txt  flir-boson-core.c  flir-boson-vvcam-old.c  flir-boson.h  sensor_dwe_boson_config.json
flir_boson_vvcam/devicetree/: scailx-imx8mp-cam0-flir-bosonp-vvcam.dts  scailx-imx8mp-cam1-flir-bosonp-vvcam.dts
flir_test/: README.md  agc_show_hex.py  boson_14_tele.py  boson_agc.txt  boson_formats_opencv.py  boson_gst_opencv.py  detect_boson.py  fourcc.py  gst_boson_format.sh  show_boson_sensor_dimension.sh
flir_vcam_driver/: .gitignore  CMakeLists.txt  boson_mono.xml  flir_boson.c
